Set flatten branch

--- a/.i18n-cms/config.json
+++ b/.i18n-cms/config.json
@@ -3,7 +3,7 @@
     "en",
     "zh"
   ],
-  "fileType": "json",
+  "fileType": "json_flatten",
   "pattern": ":lng/:ns",
   "defaultLanguage": "en"
 }
